# Processor-design

./: AssemblyHandler  AssemblyHandler.c  AssemblyProgram.txt  AssemblyProgramm.txt  CMakeLists.txt  carry_NoOverflow.txt  carry_overflow.txt  main.c  playground.c  ss  test.txt
Instructions/: I_Format.h  Instruction.h  R_Format.h
Memory/: DataMemory.h  InstructionMemory.h
Registers/: GPRs.h  PC.h  StatusRegister.h
Tests/: ADD and SUB signed test.txt  AssemblyProgramm.txt  overflow_noCarry
